--- a/config/s3.yml
+++ b/config/s3.yml
@@ -1,3 +1,3 @@
-access_key_id:   AWS_ACCESS_KEY_ID=   
+access_key_id:   AWS_ACCESS_KEY_ID
 secret_access_key:  AWS_SECRET_ACCESS_KEY
 bucket: S3_BUCKET_NAME
