update existing files

--- a/config/s3.yml
+++ b/config/s3.yml
@@ -1,3 +1,3 @@
-access_key_id:   AWS_ACCESS_KEY_ID
-secret_access_key:  AWS_SECRET_ACCESS_KEY
-bucket: AWS_BUCKET_NAME
+access_key_id:   AKIAI5GRKW322RGRBCZA
+secret_access_key:  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
+bucket: ebookleadersimages
